--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
 
-<form method="post" id="clockForm" onsubmit="submitForm(event)" action="https://api.sheetmonkey.io/form/rQ1rbmUm36og31hk7hBDeH">
+<form method="post" id="clockForm" action="https://api.sheetmonkey.io/form/rQ1rbmUm36og31hk7hBDeH" onsubmit="submitForm(event)" >
     <h2>Clock In/Out Form</h2>
 
     <div class="clock-options">
