--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <script>
     function submitForm(event) {
-        event.preventDefault(); // Prevent the default form submission behavior
+       // event.preventDefault(); // Prevent the default form submission behavior
 
         // Get form data
         var formData = new FormData(document.getElementById('clockForm'));
