--- a/index.html
+++ b/index.html
@@ -174,6 +174,16 @@
         // Include total hours in the form data
         var totalHours = totalHoursInput.value;
 
+        // Wait for 3 seconds (adjust the time as needed)
+    setTimeout(function () {
+        // Log form data (you can remove this in your production code)
+        console.log('Form Data:', new FormData(document.getElementById('clockForm')));
+
+        // Simulate form submission (you can replace this with your actual form submission logic)
+        // For now, just display a success message
+        displayMessage('Submission Successful!', 'success');
+    }, 3000); // 3000 milliseconds = 3 seconds
+
         
     }
 
