Added additional 1.5 second wait time just in case

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
 
         // Wait for 3 seconds (adjust the time as needed)
     setTimeout(function () {
-        // Log form data (you can remove this in your production code)
+        // Log form data (only for testing :))
         console.log('Form Data:', new FormData(document.getElementById('clockForm')));
 
         // Simulate form submission (you can replace this with your actual form submission logic)
         // For now, just display a success message
         displayMessage('Submission Successful!', 'success');
-    }, 3000); // 3000 milliseconds = 3 seconds
+    }, 4500); // 4500 milliseconds = 4.5 seconds
 
         
     }
